removed pregiven number

--- a/index.html
+++ b/index.html
@@ -19,41 +19,41 @@
                 <div id="mango1">
                     <table align="center" class="ctable">
                         <tr>
-                            <th width="80" align="left" class="a1">(645.5)</th>
-                            <th width="80" align="right" class="a1">(645.3)</th>
+                            <th width="80" align="left" class="a1"></th>
+                            <th width="80" align="right" class="a1"></th>
                         </tr>
                         <tr>
-                            <th width="80" align="left" class="a2">642.2</th>
-                            <th width="80" align="right" class="a2">643.0</th>
+                            <th width="80" align="left" class="a2"></th>
+                            <th width="80" align="right" class="a2"></th>
                         </tr>
                         <tr>
-                            <th width="80" align="left" class="a3">644.1</th>
-                            <th width="80" align="right" class="a3">644.0</th>
+                            <th width="80" align="left" class="a3"></th>
+                            <th width="80" align="right" class="a3"></th>
                         </tr>
                         <tr>
-                            <th width="80" align="left" class="a4">634.5</th>
-                            <th width="80" align="right" class="a4">634.1</th>
+                            <th width="80" align="left" class="a4"></th>
+                            <th width="80" align="right" class="a4"></th>
                         </tr>
                         <tr>
-                            <th width="80" align="left" class="a5">637.4</th>
-                            <th width="80" align="right" class="a5">637.5</th>
+                            <th width="80" align="left" class="a5"></th>
+                            <th width="80" align="right" class="a5"></th>
                         </tr>
                         <tr>
-                            <th width="80" align="left" class="a6">99137</th>
-                            <th width="80" align="right" class="a6">695k</th>
+                            <th width="80" align="left" class="a6"></th>
+                            <th width="80" align="right" class="a6"></th>
                         </tr>
                         <tr>
-                            <th width="80" align="left" class="a7">-</th>
-                            <th width="80" align="right" class="a7">-</th>
+                            <th width="80" align="left" class="a7"></th>
+                            <th width="80" align="right" class="a7"></th>
                         </tr>
                         <tr>
-                            <th width="80" align="left" class="a8">754/530</th>
-                            <th width="80" align="right" class="a8">754/530</th>
+                            <th width="80" align="left" class="a8"></th>
+                            <th width="80" align="right" class="a8"></th>
                         </tr>
 
                         <tr>
-                            <th width="80" align="left" class="a9">403156</th>
-                            <th width="80" align="right" class="a9">403187</th>
+                            <th width="80" align="left" class="a9"></th>
+                            <th width="80" align="right" class="a9"></th>
                         </tr>
 
 
